Add ESlint, Validate form, reload list after successful update

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -65,3 +65,12 @@
         display: none;
     }
 }
+
+#error-mess{
+    color: #ff0000;
+    font-style: italic;
+}
+
+input.err{
+    border-color: #ff0000;
+}
