--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -19,15 +19,18 @@
 #content{
     position: fixed;
     padding-left: 400px;
+    padding-right: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    padding-right: 0;
 }
-
+h2{
+    margin-top: 0;
+}
 .listScroll{
-    @include calc('height', '100% - 270px', true);
+    //@include calc('height', '100% - 270px', true);
+    @include calc('height', '100% - 343px', true);
     background: #fff;
     >div{
         overflow-x: hidden !important;
@@ -80,4 +83,43 @@ input.err{
     bottom: 0;
     left: 0;
     width: 100%;
+}
+
+.searchbox-places{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.InputPlaces{
+    width: 100%;
+}
+.form-autocomplete{
+    position: relative;
+    z-index: 9999;
+    .mui-btn{
+        margin: 0;
+    }
+}
+#PlacesAutocomplete__root{
+    @include calc('width', '100% - 100px');
+    input{
+        height: 36px;
+        padding: 0 !important;
+        box-sizing: border-box;
+        display: block;
+        background-color: transparent;
+        color: rgba(0,0,0,.87);
+        border: none;
+        border-bottom: 1px solid rgba(0,0,0,.26);
+        outline: 0;
+        width: 100%;
+        box-shadow: none;
+        border-radius: 0;
+        font-size: 16px !important;
+        font-family: inherit;
+        line-height: inherit;
+        background-image: none;
+    }
 }
